bk_ida/gobmkida/g3/clear_move_reasons
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:547:1: error: use of undeclared identifier '_OWORD'
_OWORD *v4; // rax 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:547:9: error: use of undeclared identifier 'v4'
_OWORD *v4; // rax 
        ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:565:1: error: use of undeclared identifier 'v4'
v4 = ( _OWORD *)( v3 - 480); 
^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:565:16: error: expected expression
v4 = ( _OWORD *)( v3 - 480); 
               ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:565:8: error: use of undeclared identifier '_OWORD'
v4 = ( _OWORD *)( v3 - 480); 
       ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:569:12: error: expected expression
*( _OWORD *)( v3 - 552) = v0; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:569:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 552) = v0; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:570:12: error: expected expression
*( _OWORD *)( v3 - 516) = v0; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:570:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 516) = v0; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:571:12: error: expected expression
*( _OWORD *)( v3 - 500) = xmmword_4ADB20; 
           ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:571:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v3 - 500) = xmmword_4ADB20; 
   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:571:27: error: use of undeclared identifier 'xmmword_4ADB20'
*( _OWORD *)( v3 - 500) = xmmword_4ADB20; 
                          ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:573:2: error: use of undeclared identifier 'v4'
*v4++ = v2; 
 ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:574:19: error: expected expression
while ( ( _OWORD *)v3 != v4 ); 
                  ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:574:11: error: use of undeclared identifier '_OWORD'
while ( ( _OWORD *)v3 != v4 ); 
          ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:574:20: error: expected ')'
while ( ( _OWORD *)v3 != v4 ); 
                   ^
/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/engine/move_reasons.c:574:7: note: to match this '('
while ( ( _OWORD *)v3 != v4 ); 
      ^
16 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O3/gobmk-gcc-O3/clear_move_reasons/src/obj/1/move_reasons.o] Error 1
